--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,8 +14,9 @@ set -g status-keys vi
 set -g history-limit 10000
 
 setw -g mode-keys vi
-setw -g mode-mouse on
 setw -g monitor-activity on
+
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 bind-key v split-window -h
 bind-key s split-window -v
@@ -48,6 +49,7 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+bind -t vi-copy y copy-pipe "xclip -i -selection clipboard"
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
