--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,16 +1,17 @@
 [user]
-	name = Carlos Mateu
-	email = carlos.mateu@gigas.com
+    name = Carlos Mateu
+    email = carlos.mateu@gigas.com
 [alias]
-    pl = log --graph --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
+    pl = log --graph --decorate --format=format:'%C(bold blue)%H%C(reset) - %C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
     st = status
     co = checkout
     br = branch
     rb = rebase
     ci = commit
+    ft = fetch
 [diff]
-	tool = vimdiff
+    tool = vimdiff
 [merge]
-	tool = vimdiff
+    tool = vimdiff
 [push]
-	default = current
+    default = current
