--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,7 +16,9 @@ set -g history-limit 10000
 setw -g mode-keys vi
 setw -g monitor-activity on
 
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 bind-key v split-window -h
 bind-key s split-window -v
@@ -33,13 +35,13 @@ bind-key M-l resize-pane -R
 
 # Vim style pane selection
 bind h select-pane -L
-bind j select-pane -D 
+bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
-bind -n M-j select-pane -D 
+bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
@@ -68,11 +70,11 @@ set -g pane-active-border-fg white
 set -g pane-border-fg "colour239"
 setw -g window-status-separator ""
 set -g window-status-bg "colour239"
-set -g window-status-fg white 
+set -g window-status-fg white
 set -g window-status-format "#[fg=black,none]#[bg=colour239]#[default] #I  #W #[fg=colour239,none]#[bg=black]"
-set -g window-status-current-bg white 
+set -g window-status-current-bg white
 set -g window-status-current-fg black
-set -g window-status-current-attr bold 
+set -g window-status-current-attr bold
 set -g window-status-current-format "#[fg=black,none]#[bg=white]#[fg=black,bold] #I  #W #[fg=white,none]#[bg=black]"
 set -g status-interval 60
 set -g status-left-length 30
