--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -63,7 +63,7 @@ set -sg escape-time 0
 bind r source-file ~/.tmux.conf
 
 # THEME
-set -g status-utf8 "on"
+#set -g status-utf8 "on"
 set -g status-bg black
 set -g status-fg white
 set -g pane-active-border-fg white
