--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -79,4 +79,4 @@ set -g window-status-current-format "#[fg=black,none]#[bg=white]#[fg=black,bo
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=white,bold]#[bg=cyan] #(whoami)  #[fg=cyan,none]#[bg=black]'
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=cyan]#[bg=black]#[fg=white,bold]#[bg=cyan] %D %H:%M#[default]'
+set -g status-right '#[fg=cyan]#(lsb_release -d | sed "s/^.*\://g")#[default] #[fg=cyan]#[bg=black]#[fg=white,bold]#[bg=cyan] %D %H:%M#[default]'
