--- a/others/.archey3.cfg
+++ b/others/.archey3.cfg
@@ -1,5 +1,5 @@
 [core]
-display_modules = distro(), uname(n), uname(r), uptime(), packages(), ram(), env(editor), fs(/), mpd(albums)
+display_modules = distro(), uname(n), uname(r), uptime(), packages(), env(editor), fs(/), fs(/home), ram()
 color = blue
 align = top
 
