--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,8 +17,8 @@ setw -g mode-keys vi
 setw -g monitor-activity on
 
 set -g mouse on
-bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+bind -T root WheelUpPane   if-shell -F -t = '#{alternate_on}' 'send-keys -M' 'select-pane -t =; copy-mode -e; send-keys -M'
+bind -T root WheelDownPane if-shell -F -t = '#{alternate_on}' 'send-keys -M' 'select-pane -t =; send-keys -M'
 
 bind-key v split-window -h
 bind-key s split-window -v
@@ -51,7 +51,8 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-bind -t vi-copy y copy-pipe "xclip -i -selection clipboard"
+bind -t vi-copy y copy-pipe 'xclip -i -selection clipboard'
+
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
@@ -63,20 +64,25 @@ set -sg escape-time 0
 bind r source-file ~/.tmux.conf
 
 # THEME
-#set -g status-utf8 "on"
-set -g status-bg black
+set -g status-bg 'colour236'
 set -g status-fg white
+
 set -g pane-active-border-fg white
-set -g pane-border-fg "colour239"
-setw -g window-status-separator ""
-set -g window-status-bg "colour239"
+set -g pane-border-fg 'colour236'
+
+set -g window-status-separator ''
+set -g window-status-bg 'colour240'
 set -g window-status-fg white
-set -g window-status-format "#[fg=black,none]#[bg=colour239]#[default] #I  #W #[fg=colour239,none]#[bg=black]"
+set -g window-status-attr none
+set -g window-status-format '#[fg=colour236,none]#[bg=colour240]#[fg=white,none]#[bg=colour240] #I  #W #[fg=colour240,none]#[bg=colour236]'
+
 set -g window-status-current-bg white
-set -g window-status-current-fg black
+set -g window-status-current-fg colour236
 set -g window-status-current-attr bold
-set -g window-status-current-format "#[fg=black,none]#[bg=white]#[fg=black,bold] #I  #W #[fg=white,none]#[bg=black]"
+set -g window-status-current-format '#[fg=colour236,none]#[bg=white]#[fg=colour236,bold] #I  #W #[fg=white,none]#[bg=colour236]'
+
 set -g status-interval 60
 set -g status-left-length 30
-set -g status-left '#[fg=white,bold]#[bg=cyan] #(whoami) #[fg=cyan,none]#[bg=black]'
-set -g status-right '#[fg=cyan]#(lsb_release -d | sed "s/^.*\://g")#[default] #[fg=cyan]#[bg=black]#[fg=white,bold]#[bg=cyan] %D %H:%M#[default]'
+set -g status-left '#[fg=white,bold]#[bg=cyan] #(whoami) #[fg=cyan,none]#[bg=colour236]'
+
+set -g status-right '#[fg=cyan]#(lsb_release -d | sed "s/^.*\://g")#[default] #[fg=cyan]#[bg=colour236]#[fg=white,bold]#[bg=cyan] %H:%M %d-%m-%Y'
