--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,8 +8,8 @@ set -g base-index 1
 # Automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
+set-option -g default-shell /usr/local/bin/zsh
 
-set -g default-terminal screen-256color
 set -g status-keys vi
 set -g history-limit 10000
 
@@ -79,4 +79,4 @@ set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=white,bold]#[bg=cyan] #(whoami) #[fg=cyan,none]#[bg=colour236]'
 
-set -g status-right '#[fg=cyan]#(lsb_release -d | sed "s/^.*\://g")#[default] #[fg=cyan]#[bg=colour236]#[fg=white,bold]#[bg=cyan] %H:%M %d-%m-%Y'
+set -g status-right '#[fg=cyan]OS X#[default] #[fg=cyan]#[bg=colour236]#[fg=white,bold]#[bg=cyan] %H:%M %d-%m-%Y'
