--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,14 +4,16 @@
 [core]
     editor = vim
 [alias]
-    pl = log --graph --decorate --format=format:'%C(bold blue)%H%C(reset) - %C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
-    st = status
-    co = checkout
+    a = add
     br = branch
-    rb = rebase
     ci = commit
-    ft = fetch
+    co = checkout
     d  = difftool
+    ft = fetch
+    m  = mergetool
+    pl = log --graph --decorate --format=format:'%C(bold blue)%H%C(reset) - %C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
+    rb = rebase
+    st = status
 [color]
     ui = auto
 [diff]
@@ -20,5 +22,7 @@
     prompt = false
 [merge]
     tool = vimdiff
+[mergetool]
+    keepBackup = false
 [push]
     default = current
