--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-    name = Carlos Mateu
-    email = carlos.mateu@kairosds.com
+    name = Kaito Mateu
+    email = kaito@cryptolab.net
 [core]
     editor = vim
 [alias]
