--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,7 +53,9 @@ bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-bind -t vi-copy y copy-pipe 'xclip -i -selection clipboard'
+# bind -t vi-copy y copy-pipe 'xclip -i -selection clipboard'
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe "xclip -in -selection clipboard"
 
 # Shift arrow to switch windows
 bind -n M-H  previous-window
