--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,12 +53,18 @@ bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# bind -t vi-copy y copy-pipe 'xclip -i -selection clipboard'
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'V' send -X select-line
+bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+
+bind-key c new-window -c "#{pane_current_path}"
+
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key s split-window -v -c "#{pane_current_path}"
 
 # Shift arrow to switch windows
-bind -n M-H  previous-window
+bind -n M-H previous-window
 bind -n M-L next-window
 
 # No delay for escape key press
