--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -58,10 +58,13 @@ bind-key -T copy-mode-vi 'V' send -X select-line
 bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
-bind-key c new-window -c "#{pane_current_path}"
+bind-key c new-window
+bind-key C-c new-window -c "#{pane_current_path}"
 
-bind-key v split-window -h -c "#{pane_current_path}"
-bind-key s split-window -v -c "#{pane_current_path}"
+bind-key v split-window -h
+bind-key C-v split-window -h -c "#{pane_current_path}"
+bind-key s split-window -v
+bind-key C-s split-window -v -c "#{pane_current_path}"
 
 # Shift arrow to switch windows
 bind -n M-H previous-window
